@@ -1,3 +1,6 @@
+20:
+- Update Python dependencies
+
 19:
 - Update libtorrent-rasterbat to 1.1.4
 
